--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+	  <groupId>org.eclipse.jetty.websocket</groupId>
+	  <artifactId>websocket-server</artifactId>
+	  <version>9.3.0.M1</version>
+	</dependency>
     <!-- For mapping POJOs to JSON -->
     <dependency>
       <groupId>org.codehaus.jackson</groupId>
